--- a/frontend/src/components/StoryDetails/storydetails.css
+++ b/frontend/src/components/StoryDetails/storydetails.css
@@ -11,7 +11,10 @@
   margin-left: 30%;
   margin-right: 30%;
   background-color: rgba(131, 106, 214, 0.2);
-  height: 105vh;
+  min-height: 100vh;
+  height: 3000%;
+  padding-bottom: 3%;
+  padding-top: 0;
   /* overflow: hidden; */
 }
 
